syntax = "proto3";

package xyz.multifinance.v1;

option go_package = "github.com/pt-xyz-multifinance/proto/gen/go/xyz/multifinance/v1;multifinance";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service LoanService {
  // Apply for a new loan
  rpc ApplyLoan(LoanApplicationRequest) returns (LoanApplication) {
    option (google.api.http) = {
      post: "/v1/loans/apply"
      body: "*"
    };
  }

  // Get loan application status
  rpc GetLoanStatus(GetLoanStatusRequest) returns (LoanApplication) {
    option (google.api.http) = {
      get: "/v1/loans/{loan_id}/status"
    };
  }

  // Get user's loan history
  rpc GetLoanHistory(GetLoanHistoryRequest) returns (GetLoanHistoryResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/loans"
    };
  }

  // Submit loan documents
  rpc SubmitLoanDocuments(SubmitLoanDocumentsRequest) returns (LoanApplication) {
    option (google.api.http) = {
      post: "/v1/loans/{loan_id}/documents"
      body: "*"
    };
  }
}

message LoanApplicationRequest {
  string user_id = 1;
  double amount = 2;
  int32 tenure_months = 3;
  string purpose = 4;
  string employment_status = 5;
  double monthly_income = 6;
  repeated string existing_loans = 7;
}

message LoanApplication {
  string id = 1;
  string user_id = 2;
  double amount = 3;
  int32 tenure_months = 4;
  string purpose = 5;
  string status = 6;
  double monthly_payment = 7;
  double interest_rate = 8;
  double disbursed_amount = 9;
  google.protobuf.Timestamp disbursed_at = 10;
  repeated Document documents = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message Document {
  string id = 1;
  string type = 2;
  string name = 3;
  string status = 4;
  string url = 5;
  google.protobuf.Timestamp uploaded_at = 6;
}

message GetLoanStatusRequest {
  string loan_id = 1;
}

message GetLoanHistoryRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetLoanHistoryResponse {
  repeated LoanApplication loans = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message SubmitLoanDocumentsRequest {
  string loan_id = 1;
  repeated Document documents = 2;
}
